Spacing fixed in CategoryCard.

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -144,7 +144,7 @@ h6 {
   width: 80%;
   height: 100%;
   border-radius: 5px;
-  padding: 32px;
+  padding: calc(32px + 2rem) 32px 16px 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -164,6 +164,24 @@ h6 {
   font-size: 1.5rem;
 }
 
+.category-conatiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 45%;
+  width: 90%;
+}
+
+.number-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.number-wrapper * {
+  margin: 0;
+}
 
 /** INPUT AND FORMS */
 form {
